--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <h1>mslolcat</h1>
         <a href="https://discord.gg/aSbDZ9nskZ" class="button discord">Discord</a>
         <a href="https://x.com/pooca2t" class="button twitter">Twitter</a>
-       <a href="mslolcat.vercel.app/media.html" class="button showcasescript">Developers</a>
+       <a href="/media.html" class="button showcasescript">Developers</a>
     </div>
 
     <div class="main">
